<resources>
    <string name="app_name">LocusAssignment</string>
    <string name="txt_take_a_photo">Take A Photo</string>
    <string name="txt_provide_comment">Provide Comment</string>
    <string name="txt_type_comment">Type Comment</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_locus">Locus Assignment</string>
    <string name="txt_switch_camera">Switch camera</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="txt_title">Title</string>
    <string name="txt_remove_photo">Remove photo</string>
</resources>
