<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <LinearLayout
            android:id="@+id/ll_camera_preview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorBlue"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_remove_photo"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/txt_remove_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/remove_photo_icon"/>

        <TextView
            android:id="@+id/tv_radio_button_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/txt_title"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_camera_preview"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_radio_button_title">

            <RadioButton
                android:id="@+id/rb_option_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_a"/>

            <RadioButton
                android:id="@+id/rb_option_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_b"/>

            <RadioButton
                android:id="@+id/rb_option_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_c"/>

        </RadioGroup>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ll_comment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/grey_border"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <TextView
                android:id="@+id/tv_comment_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_provide_comment"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/sw_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/sw_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_comment_title"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_type_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/drawable_rectangle"
                android:gravity="start"
                android:hint="@string/txt_type_comment"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="4"
                android:overScrollMode="always"
                android:paddingLeft="16dp"
                android:paddingTop="7dp"
                android:paddingRight="16dp"
                android:paddingBottom="7dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_comment_title"/>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_comment_layout"/>
    </android.support.constraint.ConstraintLayout>

</layout>